Expose markdown JSON file for job preview
