# src/DocflowAi.Net.Api/JobQueue/Models/JobDocument.cs
@@ -35,6 +35,7 @@ public class JobDocument
         public DocumentInfo? Output { get; set; }
         public DocumentInfo? Error { get; set; }
         public DocumentInfo? Markdown { get; set; }
+        public DocumentInfo? MarkdownJson { get; set; }
     }
 
     public class DocumentInfo
